templates/grader/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grader
spec:
  selector:
    app: grader
  ports:
    - protocol: TCP
      port: 80
